--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,15 +15,12 @@
     "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/image-manipulation": [
-        "libs/image-manipulation/src"
-      ],
-      "@app/image-manipulation/*": [
-        "libs/image-manipulation/src/*"
-      ]
+      "@app/image-manipulation": ["libs/image-manipulation/src"],
+      "@app/image-manipulation/*": ["libs/image-manipulation/src/*"]
     }
   }
 }
