--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-basic-auth": "^1.2.1",
     "get-stream": "^8.0.1",
     "helmet": "^7.0.0",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nestjs-i18n": "^10.3.1",
